--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
     <script src="libraries/helper.js"></script>
-    <script src="libraries/Custom.js"></script>
+    <script src="libraries/Grid.js"></script>
   </head>
 
   <body>
